<resources>
    <string name="app_name">MyRecipeBook</string>
    <string name="serverIp">http://myrecipebook.ngrok.io/api/values/</string>

    <!-- Strings used in the search.xml file -->
    <string name="search">Ricerca</string>
    <string name="select_ingredients">Digita qui gli ingredienti...</string>
    <string name="filter_by">Filtra per:</string>
    <string name="difficulty">Difficoltà</string>
    <string name="time">Tempo</string>
    <string name="apply_intolerances">Applica allergie e intolleranze</string>
    <string name="apply_storeroom">Applica dispensa</string>
    <string name="appetizers">Antipasti</string>
    <string name="first_dishes">Primi</string>
    <string name="second_dishes">Secondi</string>
    <string name="desserts">Dessert</string>
    <string name="recipe_name">Nome ricetta:</string>
    <string name="search_button">Cerca</string>
    <string name="recipe_search_title">Ricerca Ricette</string>
    <string name="descriptionDrawer">Cosa mangiamo oggi?</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="app_icon">App Icon</string>
    <string name="background_header_image">Background Header Image</string>
    <string name="myrecipebook">MyRecipeBook</string>
    <string name="RecipeTitleDetail">Titolo Ricetta</string>
    <string name="detail_difficulty">Difficoltà:</string>
    <string name="detail_time">Tempo:</string>
    <string name="detail_dose">Dosi per:</string>
    <string name="detail_category">Categoria:</string>
    <string name="detail_ingredients">Ingredienti:</string>
    <string name="immagine_ricetta">Immagine ricetta</string>
    <string name="detail_procedure">Procedimento:</string>
    <string name="detail_recipe">Dettaglio ricetta</string>
    <string name="unknown">- - -</string>
    <string name="inizia_procedura_guidata">Avvia procedura guidata</string>
    <string name="latticini">Latticini</string>
    <string name="allergie_o_intolleranze_descr">Seleziona le tue allergie o intolleranze:</string>
    <string name="frutta_a_guscio">Frutta a guscio</string>
    <string name="crostacei">Crostacei</string>
    <string name="uova">Uova</string>
    <string name="frumento_e_glutine">Frumento e glutine</string>
    <string name="soia">Soia</string>
    <string name="pesce">Pesce</string>
    <string name="latticini_icon">latticini icon</string>
    <string name="piatto_unico">Piatto Unico</string>
    <string name="difficultyLabel">Difficoltà:</string>
    <string name="timeLabel">Tempo:</string>
    <string name="steps_title">Passo %1$d</string>
    <string name="record_audio_is_required">La registrazione dell audio verrà usata solamente per poter effettuare il riconoscimento vocale dei comandi</string>
    <string name="vocal_recognition">Riconoscimento vocale</string>
    <string name="immagine_stella_preferenze">Immagine stella preferenze</string>
    <string name="alert_message">Vuoi utilizzare la lettura del testo e il riconoscimento vocale?</string>
    <string name="icona_difficolta">icona_difficolta</string>
    <string name="no_results">Nessun risultato trovato</string>
    <string name="suggested_API">suggested</string>
    <string name="loading_message">Ricerca ricette in corso...</string>
    <string name="latticini_prefKey">latticini</string>
    <string name="allergies_title">Allergie</string>
    <string name="frutta_a_guscio_prefKey">frutta</string>
    <string name="crostacei_prefKey">crostacei</string>
    <string name="uova_prefKey">uova</string>
    <string name="soia_prefKey">soia</string>
    <string name="pesce_prefKey">pesce</string>
    <string name="frumento_e_glutine_prefKey">frumento</string>
    <string name="email">Email</string>
    <string name="inizia_a_scrivere_una_domanda_o_feedback">Feedback...</string>
    <string name="help_descr">Inviaci le tue domande o feedback per ricevere supporto, inserisci la tua email in modo da essere ricontattato</string>
    <string name="results_title">Risultati</string>
    <string name="recipelist_Bkey">recipelist</string>
    <string name="nome_ricetta">Nome ricetta</string>
    <string name="ricerca_per_nome_descr">Sai già cosa cucinare? Cerca per nome la tua ricetta</string>
    <string name="ricerca_per_ingredienti_descr">Seleziona gli ingredienti che hai a disposizione</string>
    <string name="filter_descr">Personalizza la tua ricerca</string>
    <string name="dialog_message">Vuoi utilizzare la lettura automatica del testo ed il riconoscimento vocale?</string>
    <string name="first_step">Passo 1</string>
    <string name="step_text">Step text</string>
    <string name="exit_txt_btn">esci</string>
    <string name="repeat_txt_btn">Ripeti</string>
    <string name="next_txt_btn">Avanti</string>
    <string name="back_txt_btn">Indietro</string>
    <string name="background_image_steps">background image steps</string>
    <string name="one_hour">1 ora</string>
    <string name="minutes">%1$d minuti</string>
    <string name="hours">%1$d ore</string>
    <string name="dosePersona">%1$d persona</string>
    <string name="dosePersone">%1$d persone</string>
    <string name="error_email_txt">Per inviare un feedback è necessario specificare una mail</string>
    <string name="error_feedback_txt">Per inviare un feedback è necessario specificare un messaggio</string>
    <string name="thanks_feedback">Grazie per il feedback!</string>
    <string name="error_send_feedback">Errore durante l\'invio del feedback, per favore riprova</string>
    <string name="appetizer">Antipasti</string>
    <string name="first_dish">Primi piatti</string>
    <string name="second_dish">Secondi piatti</string>
    <string name="dessert">Dolci</string>
    <string name="unique_dish">Piatto Unico</string>
    <string name="server_error">errore durante la connessione al server</string>
    <string name="txt_loading">Caricamento ricette...</string>

</resources>
