<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:gravity="bottom"
    android:orientation="vertical"
    android:theme="@style/ThemeOverlay.AppCompat.Dark"
    android:paddingTop="@dimen/activity_vertical_margin" >


    <ImageView
        android:id="@+id/imageBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/food_background"
        android:visibility="visible"
        android:contentDescription="@string/background_header_image" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/TitleApp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        app:srcCompat="@mipmap/app_icon"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:contentDescription="@string/app_icon" />

    <TextView
        android:id="@+id/TitleApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:text="@string/myrecipebook"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:layout_above="@+id/SubtitleApp"
        android:layout_alignParentStart="true"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/SubtitleApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/descriptionDrawer"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"

        android:paddingBottom="@dimen/nav_header_vertical_spacing"/>

</RelativeLayout>