<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/primaryBackground">

    <TextView
        android:id="@+id/Allergies_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/allergie_o_intolleranze_descr"
        android:textSize="18sp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"/>

    <android.support.v7.widget.CardView
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="16dp"
            android:paddingBottom="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/crostacei_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            app:srcCompat="@drawable/crostacei"
            tools:ignore="ContentDescription" />

        <CheckedTextView
            android:id="@+id/Crostacei"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:checkMark="?android:attr/listChoiceIndicatorMultiple"
            android:checked="false"
            android:gravity="center_vertical"
            android:text="@string/crostacei"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="32dp"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/frutta_a_guscio_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            app:srcCompat="@drawable/frutta_a_guscio"
            tools:ignore="ContentDescription" />

        <CheckedTextView
            android:id="@+id/Frutta_a_guscio"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:checkMark="?android:attr/listChoiceIndicatorMultiple"
            android:checked="false"
            android:gravity="center_vertical"
            android:text="@string/frutta_a_guscio"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="32dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/frumento_e_glutine_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            app:srcCompat="@drawable/frumento_e_glutine"
            tools:ignore="ContentDescription" />

        <CheckedTextView
            android:id="@+id/Frumento_e_glutine"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:checkMark="?android:attr/listChoiceIndicatorMultiple"
            android:checked="false"
            android:gravity="center_vertical"
            android:text="@string/frumento_e_glutine"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="32dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/soia_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            app:srcCompat="@drawable/soia"
            tools:ignore="ContentDescription" />

        <CheckedTextView
            android:id="@+id/Soia"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:checkMark="?android:attr/listChoiceIndicatorMultiple"
            android:checked="false"
            android:gravity="center_vertical"
            android:text="@string/soia"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="32dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/latticini_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            app:srcCompat="@drawable/latticini"
            tools:ignore="ContentDescription" />

        <CheckedTextView
            android:id="@+id/Latticini"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:checkMark="?android:attr/listChoiceIndicatorMultiple"
            android:checked="false"
            android:gravity="center_vertical"
            android:text="@string/latticini"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="32dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/pesce_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            app:srcCompat="@drawable/pesce"
            tools:ignore="ContentDescription" />

        <CheckedTextView
            android:id="@+id/Pesce"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:checkMark="?android:attr/listChoiceIndicatorMultiple"
            android:checked="false"
            android:gravity="center_vertical"
            android:text="@string/pesce"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="32dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/uova_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            app:srcCompat="@drawable/uova"
            tools:ignore="ContentDescription" />

        <CheckedTextView
            android:id="@+id/Uova"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:checkMark="?android:attr/listChoiceIndicatorMultiple"
            android:checked="false"
            android:gravity="center_vertical"
            android:text="@string/uova"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="32dp"/>

    </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>


</LinearLayout>